# bead

./: Makefile
bead/: box.py
dev/: Containerfile  vm
rust/: .gitignore  AGENTS.md  Cargo.toml  README.md  RISKS.md
rust/src/: error.rs  lib.rs
rust/src/core/: archive.rs  bead.rs  box_store.rs  input.rs  meta.rs  mod.rs  workspace.rs
rust/src/tech/: mod.rs  persistence.rs  securehash.rs  timestamp.rs
