[package]
name = "bead"
version = "0.8.2"
edition = "2021"
authors = ["Bead Contributors"]
license = "MIT OR Apache-2.0"
description = "Linked frozen computations - Rust implementation"

[dependencies]
clap = { version = "4", features = ["derive", "env", "cargo"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
zip = "0.6"
directories = "5"
anyhow = "1"
thiserror = "1"
glob = "0.3"
regex = "1"
walkdir = "2"
once_cell = "1"

[dev-dependencies]
tempfile = "3"
assert_fs = "1"
predicates = "3"